Skip `RISK_LEVEL_OVERRIDE_CONFIRMATION` from AML health checks